[package]
name = "microhector"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.10"

[features]
portable-simd = []

[profile.release]
debug = true


[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[[bench]]
name = "vector_search"
harness = false
